# server_code3

./: CMakeLists.txt  rerun.sh
loggerserver/: CMakeLists.txt  ReadMe.txt  dcapi_cpp.h  logger_exp.h  logger_server.cc  logger_session.cc  logger_session.h  lua_data_packet.cc  lua_interface.cc  lua_interface.scp  main.cc  srv_config.h
server_code/centerserver/: CMakeLists.txt  center_server.cc  srv_config.cc  srv_config.h  stdafx.cpp  stdafx.h
server_code/common/: CMakeLists.txt  InterServerComm.h  dbghelp.h
server_code/common/common/: gem_def.h  property_id_def.h
server_code/common/db/: achieve_data.h  actor_cache_def.h  actor_db_data.h  config_db_data.h  consignment.h  item_data.h  pet_data.h  rank_data.h  role_data.h  store_data.h  table_defs.h
server_code/common/fastFT/: fastFT.h  makefile
server_code/common/gameMap/: game_map.h  stlastar.h
server_code/common/gate/: gate_manager.cc  gate_proto.h  gate_session.h  gate_user.h
server_code/common/log/: log_def.h  log_sender.h
server_code/common/redis/: redis_def.h
server_code/common/redis/hiredis/: hiredis.h
server_code/common/statistic/: time_stat.h  time_stat_log.h
server_code/common/thread/: async_worker.cc  async_worker.h
server_code/common/utils/: fdop.h  luareader.h  watch_thread.cc  watch_thread.h
server_code/dbserver/: CMakeLists.txt  DBServer.aps  StdAfx.h  db_cache.h  db_config.cc  db_config.h  db_pvm_cache.cc  db_pvm_cache.h  db_server.cc  db_session.cc  db_session_mgr.cc  db_session_mgr.h  db_tables.h  dbserver_exp.h  dbserver_utils.cc  dbserver_utils.h  lua_interface.cc  lua_interface.scp
server_code/dbserver/datahandle/: handle_conf.lua  mail_handle.cc  msg_handle.cc  sysvar_handle.cc  variable_handle.cc
server_code/gameworld/: CMakeLists.txt  alloc.h  game_engine.cc  game_engine.h  game_server.cc  version.h
server_code/gameworld/actormgr/: actor_mgr.cc  actor_mgr.h  login_queue.cc  login_queue.h  rand_name_list.cc
server_code/gameworld/base/: TipMsgId.h  act_msg.cc  entity_attri_flag.h  game_lua_config.cc  game_lua_config.h  msg_mgr.cc  netmsg_dispatcher.cc  system_var_mgr.h
server_code/gameworld/base/config/: game_config_data.cc  game_server_config.cc
server_code/gameworld/base/db/: db_client.cc
server_code/gameworld/base/gate/: game_gate.h  game_gate_mgr.h
server_code/gameworld/base/lang/: lang_pack.cc  lang_pack.h
server_code/gameworld/base/lianfu/: lf_netmsg_mgr.h  lianfu_guild.cpp  lianfu_mgr.h  lianfu_rank.h
server_code/gameworld/base/timedomain/: time_field.cc
server_code/gameworld/crossservice/: game_conn.h  game_conn_mgr.h
server_code/gameworld/dkmlog/: dkm_log_mgr.cc
server_code/gameworld/entity/: creature.cc  drop_bag.cc  entity.h  entity_op_collect.h  entity_system.cc  entity_system.h  npc.cc  script_npc.cc  script_npc.h
server_code/gameworld/entity/actor/: actor.cc  actor.h  actor_asyn_event.h  actor_asyn_mgr.cc  actor_asyn_mgr.h  actor_data_mgr.cc  actor_data_mgr.h  tianti.h
server_code/gameworld/entity/monster/: fb_gather_handle.cc  fb_gather_handle.h  gather_monster.h  monster.cc
server_code/gameworld/entity/role/: role.cc  role_config.cc  role_config.h  role_system.cc  role_system.h
server_code/gameworld/other/txlog/: tlog_mgr.cpp
server_code/gameworld/plus/: attr_type.lua  lang_auto.lua  tipmsgcrc
server_code/gameworld/protocol/: system_cmd_def.h
server_code/gameworld/protocol/handles/: equip_handle.cc  net_handle_base.h  wing_handle.cc
server_code/gameworld/protocol/protos/: base_proto.h  equip_proto.h  guild_proto.h  item_proto.h  skill_proto.h  store_proto.h  wing_proto.h
server_code/gameworld/redis/: RedisConnect.cc  RedisConnect.h  RedisResult.h
server_code/gameworld/script/: game_script.cc  game_script.h  lua-bson.cc
server_code/gameworld/script/export/: actor_export_fun.cc  fuben_export_fun.cc  guild_export_fun.cc  log_def.cc  lua_data_packet.cc  ranking_export.cc  redis_api.cc  system_export_fun.cc
server_code/gameworld/script/hlp/: lua_hlp.h
server_code/gameworld/script/interface/: actor_event_def.h  actor_export_fun.h  actor_mgr_fun.h  buff_type.h  guild_export_fun.h  log_def.h  lua_help_export_fun.h  ranking_export.h  redis_api.h
server_code/gameworld/script/tolua++/: lua_socket.pkg  serverInterface.cc
server_code/gameworld/systems/: lua_var_system.cc  lua_var_system.h
server_code/gameworld/systems/actorexring/: actor_ex_ring_system.h
server_code/gameworld/systems/ai/: ai.cc  ai.h  ai_condition.cc  ai_condition.h  ai_event.cc  skill_condition.h
server_code/gameworld/systems/attr/: attribute.cc  attrs_system.h  ex_attr.h
server_code/gameworld/systems/bless/: bless_system.cc
server_code/gameworld/systems/cswar/: war_system.h
server_code/gameworld/systems/ex-ring/: ex_ring_system.cc  ex_ring_system.h
server_code/gameworld/systems/fuling/: fuling_system.cc
server_code/gameworld/systems/fuwen/: fuwensystem.h
server_code/gameworld/systems/godweapon/: godweaponsystem.cc  godweaponsystem.h
server_code/gameworld/systems/guild/: guild.cc  guild.h  guild_config.cc  guild_config.h  guild_mgr.cc  guild_mgr.h  guild_system.cc
server_code/gameworld/systems/item/: item.h  item_config.h  item_pool.h
server_code/gameworld/systems/jingmai/: jingmai_system.cc  jingmai_system.h
server_code/gameworld/systems/kuangsystem/: kuangsystem.h
server_code/gameworld/systems/mail/: mail_pool.cc  mail_pool.h  mail_system.h
server_code/gateway/: CMakeLists.txt  StdAfx.h  build.sh  gate_server.h  main.cc
server_code/gateway/client/: client.txt
server_code/gateway/config/: ws_gate_config.h
server_code/gateway/event/: epoll_event.cc  epoll_event.h  select_event.cc  select_event.h
server_code/gateway/gameworld/: game_world_client.cc
server_code/gateway/srv/: game_client_mgr.cc  game_client_mgr.h  socket_srv.cc  socket_srv.h
server_code/srvlib/: CMakeLists.txt  build.sh
server_code/srvlib/include/: ansi_string.hpp  appitnmsg.h  bzhash.h  data_packet.hpp  data_packet_reader.hpp  md5.h  second_time.h  stream.h  x_lock.h  x_tick.h
server_code/srvlib/src/: base64.cc  share_util.cc  wrand.cc
(+546 files in other folders)
